# Sales

./: .gitignore  README.md  disposables.txt  nixpacks.toml  personalize.db  pyproject.toml  railpack.json  railway.json  requirements.txt  verify.db
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Badge.jsx  BulkResultsModal.jsx  Button.jsx  Modal.jsx  PersonalizationModal.jsx  PersonalizationResultsModal.jsx  Pill.jsx  ProductSwitcher.jsx  Section.jsx  StatCard.jsx  Table.jsx  Toast.jsx  ToastContainer.jsx
frontend/src/contexts/: ProductContext.jsx
frontend/src/pages/: Personalize.jsx  Settings.jsx  Verify.jsx
seeds/: sources.csv
src/: app.py  autonomous_crawler.py  config.py  email_templates.py  icp_scoring.py  job_board_crawler.py  personalize_db.py  personalize_engine.py  personalize_generator.py  press_signal_collector.py  product_launch_crawler.py  prompts.py  verify.py  verify_storage.py
src/verify_personalize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
